--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -26,6 +26,8 @@ body {
   height: 100%;
 }
 body {
+  display: flex;
+  flex-direction: column;
   margin: 0;
   font-family: 'Montserrat', 'Helvetica Neue', sans-serif;
 }
